// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Reply /> should render correctly with step 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="list-group-item__opinion opinion mb-20 mt-20"
  id="reply-reply1"
  listItem={false}
>
  <Media
    bsClass="media"
    componentClass="div"
  >
    <MediaLeft
      bsClass="media-left"
    >
      <Connect(UserAvatar)
        user={
          Object {
            " $fragmentRefs": null,
          }
        }
      />
    </MediaLeft>
    <MediaBody
      bsClass="media-body"
      className="opinion__body"
      componentClass="div"
    >
      <div
        className="opinion__data"
      >
        <p
          className="h5"
        >
          <Relay(Connect(UserLink))
            user={
              Object {
                " $fragmentRefs": null,
              }
            }
          />
          <span
            className="ml-5 mr-5"
          >
            <FormattedMessage
              id="reply.has_replied"
              values={Object {}}
            />
          </span>
          <span>
            <a
              href="/project/projet-avec-questionnaire/questionnaire/questionnaire-des-jo-2024"
            >
              Titre du questionnaire
            </a>
          </span>
        </p>
        <span
          className="excerpt opinion__date"
        >
          <FormattedDate
            day="numeric"
            hour="numeric"
            minute="numeric"
            month="long"
            value={"2019-03-07T23:00:00.000Z"}
            year="numeric"
          />
        </span>
      </div>
    </MediaBody>
  </Media>
</ListGroupItem>
`;

exports[`<Reply /> should render correctly without step 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="list-group-item__opinion opinion mb-20 mt-20"
  id="reply-reply1"
  listItem={false}
>
  <Media
    bsClass="media"
    componentClass="div"
  >
    <MediaLeft
      bsClass="media-left"
    >
      <Connect(UserAvatar)
        user={
          Object {
            " $fragmentRefs": null,
          }
        }
      />
    </MediaLeft>
    <MediaBody
      bsClass="media-body"
      className="opinion__body"
      componentClass="div"
    >
      <div
        className="opinion__data"
      >
        <p
          className="h5"
        >
          <Relay(Connect(UserLink))
            user={
              Object {
                " $fragmentRefs": null,
              }
            }
          />
          <span
            className="ml-5 mr-5"
          >
            <FormattedMessage
              id="reply.has_replied"
              values={Object {}}
            />
          </span>
          <span>
            <span>
              Titre du questionnaire
            </span>
          </span>
        </p>
        <span
          className="excerpt opinion__date"
        >
          <FormattedDate
            day="numeric"
            hour="numeric"
            minute="numeric"
            month="long"
            value={"2019-03-07T23:00:00.000Z"}
            year="numeric"
          />
        </span>
      </div>
    </MediaBody>
  </Media>
</ListGroupItem>
`;
